--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -41,6 +41,7 @@
         color: var(--primary-text-color);
         line-height: 1.71;
     }
+        
 }
 
 .advantage-img {
@@ -56,5 +57,11 @@
     // .advantage-img__svg {
     //     padding: 25px 0;
     // }
+}
+.section--no-padding {
+    @media screen and (min-width: 1200px){
+        padding-bottom: 0;
+    }
+    
 }
 
