--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -26,6 +26,9 @@ body {
             padding-top: 94px;
             padding-bottom: 94px;
         }
+        .section--no-padding{
+            padding-bottom: 0;
+        }
 }
 
 
