--- a/sass/components/_comand.scss
+++ b/sass/components/_comand.scss
@@ -1,6 +1,12 @@
 
 .section--outher-bg {
     background-color: var(--comand-bg-color);
+
+    @media screen and (min-width: 1200px){
+        padding-bottom: 0 ;
+    }
+    
+        
 }
 .team{
     // display: flex;
@@ -25,7 +31,7 @@
        
     
     .team__item {
-        width: 450px;
+        
             background: #ffffff;
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
                 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -93,11 +99,11 @@
                 background-color: var(--accent-text-color);
                 fill: var(--header-bg-color);
             }
-        .social__item:last-child {
-            margin-right: 0;
+                
         }
-            
-        }
+}
+.social__item:last-child {
+    margin-right: 0;
 }
 
 
