--- a/sass/components/_direction.scss
+++ b/sass/components/_direction.scss
@@ -6,6 +6,9 @@
 .direction {
     display: flex;
     justify-content: space-between;
+    
+            padding-top: 0;
+    
     @media screen and (max-width: 1199px) {
             display: none;
         }
