--- a/sass/components/_hero-overlay.scss
+++ b/sass/components/_hero-overlay.scss
@@ -4,10 +4,11 @@
     padding-top: 118px;
     padding-bottom: 118px;
     background: rgba(47, 48, 58, 0.4);
-    max-width: 100%;
+    width: 767px;
     height: 400px;
     margin-right: auto;
     margin-left: auto;
+    
     background-repeat: no-repeat;
         background-size: cover;
     background-position: center;
@@ -25,7 +26,16 @@
             }
         
         @media screen and (min-width: 768px) {
-                
+                background-color: var(--hero-bg-color);
+                    text-align: center;
+                    padding-top: 118px;
+                    padding-bottom: 118px;
+                    background: rgba(47, 48, 58, 0.4);
+                    max-width: 100%;
+                    width: 1200px;
+                    height: 400px;
+                    margin-right: auto;
+                    margin-left: auto;
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
