--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -98,7 +98,8 @@
 .progects__item {
     position: relative;
     margin-bottom: 30px;
-    
+    .progects__item:last-child {
+            margin-bottom: 0;}
 @media screen and (min-width: 768px){
 flex-basis: calc((100% - 60px) / 2);
     margin-right: 30px;
@@ -118,7 +119,9 @@ flex-basis: calc((100% - 60px) / 2);
     
     
 }
-
+.progects__item:last-child {
+    margin-bottom: 0;
+}
 
 
 
