--- a/sass/components/_utilits.scss
+++ b/sass/components/_utilits.scss
@@ -53,3 +53,17 @@ a {
 .centered {
     text-align: center;
 }
+.mob-adapt {
+    width: 767px;
+    margin: 0 auto;
+
+    @media screen and (min-width: 768px) {
+        width: 100%;
+    }
+}
+.no-padding-section{
+    @media screen and (min-width: 1200px){
+        padding-bottom: 0;
+    }
+    
+}
