--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -6,7 +6,7 @@
     left: 0;
     width: 100%;
     background-color: var(--header-bg-color);
-    width: 100vw;
+    // width: 100vw;
     height: 100vh;
         
     overflow-y: auto;
