--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -58,10 +58,10 @@
     //     padding: 25px 0;
     // }
 }
-.section--no-padding {
-    @media screen and (min-width: 1200px){
-        padding-bottom: 0;
-    }
+// .section--no-padding {
+//     @media screen and (min-width: 1200px){
+//         padding-bottom: 0;
+//     }
     
-}
+// }
 
