--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,7 +5,6 @@
     background-color: var(--footer-bg-color);
     padding-top: 60px;
     padding-bottom: 60px;
-    width: 767px;
         margin: 0 auto 0 auto;
     @media screen and (min-width: 768px) {
             width: 100%;
@@ -171,19 +170,28 @@
         
 
     .form-footer__input {
-            margin-bottom: 20px;
-            margin-right: 12px;
-            width: 450px;
+            
+            width: 320px;
             height: 50px;
             padding: 15px 15px 16px;
+            margin-bottom: 20px;
             border-radius: 4px;
             color: rgba(255, 255, 255, 0.6);
             background-color: var(--footer-bg-color);
             border: 1px solid #ffffff4d;
             box-shadow: 0px 4px 4px 0px #00000026;
+            @media screen and (min-width: 480px) {
+                    width: 450px;
+                    height: 50px;
+                    margin-bottom: 20px;
+                    margin-right: 0;
+                }
+           
             @media screen and (min-width: 1200px){
             width: 350px;
                 height: 50px;
+                margin-bottom: 0;
+                    margin-right: 12px;
             }
         }
 }
