--- a/sass/components/_hero-overlay.scss
+++ b/sass/components/_hero-overlay.scss
@@ -4,7 +4,7 @@
     padding-top: 118px;
     padding-bottom: 118px;
     background: rgba(47, 48, 58, 0.4);
-    width: 767px;
+    // width: 767px;
     height: 400px;
     margin-right: auto;
     margin-left: auto;
@@ -75,7 +75,7 @@
 }
 
     .hero__title {
-            width: 360px;
+            
             margin: 0 auto;
             color: var(--header-bg-color);
                 margin: 0 auto;
