--- a/sass/components/_portfolio-nav.scss
+++ b/sass/components/_portfolio-nav.scss
@@ -9,7 +9,7 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     margin-bottom: 40px;
-    width: 480px;
+    
     
     @media screen and (min-width: 768px) {
         width: 100%;
@@ -25,8 +25,20 @@
                 }
 }
 
-.portfolio-nav__item {
-    margin-bottom: 15px;
-    margin-right: 8px;
-}
 
+
+.portfolio-nav__item{
+    margin-top: 15px;
+@media screen and (min-width: 400px){
+:nth-child(-n+2) {
+        margin-top: 0;
+}}
+    @media screen and (min-width: 768px){
+        margin-top: 0;
+    }
+    }
+    
+    .portfolio-nav__item:nth-child(-n+3){
+        margin-top: 0;
+        
+    }
