--- a/sass/components/_utilits.scss
+++ b/sass/components/_utilits.scss
@@ -54,7 +54,7 @@ a {
     text-align: center;
 }
 .mob-adapt {
-    width: 767px;
+    // width: 767px;
     margin: 0 auto;
 
     @media screen and (min-width: 768px) {
