--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -29,6 +29,7 @@ body {
         .section--no-padding{
             padding-bottom: 0;
         }
+                
 }
 
 
@@ -51,4 +52,8 @@ body {
                                     font-size: 36px;
                                 }
                                 
+}
+.section--no-pading-top {
+    padding-top: 0;
+padding-bottom: 0;
 }
