--- a/sass/components/_comand.scss
+++ b/sass/components/_comand.scss
@@ -2,9 +2,9 @@
 .section--outher-bg {
     background-color: var(--comand-bg-color);
 
-    @media screen and (min-width: 1200px){
-        padding-bottom: 0 ;
-    }
+    // @media screen and (min-width: 1200px){
+    //     padding-bottom: 0 ;
+    // }
     
         
 }
