--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -18,10 +18,10 @@
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    &.header__conteiner--adapt{
-        margin-left: 0;
-            margin-right: 0;
-    }
+    // &.header__conteiner--adapt{
+    //     margin-left: 0;
+    //         margin-right: 0;
+    // }
     
     @media screen and (min-width: 768px){
         display: flex;
