--- a/sass/components/_utilits.scss
+++ b/sass/components/_utilits.scss
@@ -61,9 +61,9 @@ a {
         width: 100%;
     }
 }
-.no-padding-section{
-    @media screen and (min-width: 1200px){
-        padding-bottom: 0;
-    }
+// .no-padding-section{
+//     @media screen and (min-width: 1200px){
+//         padding-bottom: 0;
+//     }
     
-}
+// }
