--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -9,10 +9,12 @@
     display: none;
     display: flex;
     align-items: center;
+    margin-left: 93px;
+    margin-right: auto;
 }
 .header__conteiner{
     
-    
+    position: relative;
     align-items: center;
     padding-left: 15px;
     padding-right: 15px;
