--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,11 @@ body {
 
 .section--no-pading-top {
   padding-top: 0;
-  padding-bottom: 0;
+}
+@media screen and (max-width: 1199px) {
+  .section--no-pading-top {
+    padding-bottom: 0;
+  }
 }
 
 a {
@@ -175,9 +179,12 @@ a {
   display: none;
   display: flex;
   align-items: center;
+  margin-left: 93px;
+  margin-right: auto;
 }
 
 .header__conteiner {
+  position: relative;
   align-items: center;
   padding-left: 15px;
   padding-right: 15px;
@@ -266,7 +273,6 @@ a {
 @media screen and (min-width: 768px) {
   .site-nav {
     display: flex;
-    margin-left: 93px;
   }
 }
 .site-nav__link {
@@ -312,7 +318,6 @@ a {
 .contacts-header {
   display: none;
   display: flex;
-  margin-left: auto;
 }
 @media screen and (min-width: 768px) {
   .contacts-header {
@@ -333,13 +338,15 @@ a {
   .contacts-header .contacts-header__item {
     margin-bottom: 10px;
   }
-}
-.contacts-header .contacts-header__item:last-child {
-  margin-bottom: 0;
+  .contacts-header .contacts-header__item:last-child {
+    margin-bottom: 0;
+    margin-right: 0;
+  }
 }
 @media screen and (min-width: 1200px) {
   .contacts-header .contacts-header__item {
     margin-right: 30px;
+    margin-bottom: 0;
   }
 }
 .contacts-header .contacts-header__link {
@@ -374,6 +381,7 @@ a {
     align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-bottom: 0;
     fill: var(--primary-text-color);
     color: var(--primary-text-color);
     font-weight: 500;
@@ -392,6 +400,10 @@ a {
     color: var(--accent-text-color);
     fill: var(--accent-text-color);
   }
+}
+
+.contacts-header__link:last-child {
+  margin-bottom: 0;
 }
 
 .mobile-menu {
@@ -465,17 +477,15 @@ a {
   margin-bottom: 0;
 }
 .contacts-mob-menu__item .contacts-mob-menu__link--small {
+  color: var(--primary-text-color);
   font-weight: 500;
   font-size: 24px;
   line-height: 0.8571;
   letter-spacing: 0.02em;
 }
-.contacts-mob-menu__item .contacts-mob-menu__link--small:hover, .contacts-mob-menu__item .contacts-mob-menu__link--small:focus {
-  color: var(--accent-text-color);
-}
 
 .contacts-mob-menu__link {
-  color: var(--primary-text-color);
+  color: var(--accent-text-color);
   font-weight: 500;
   font-size: 34px;
   line-height: 1.1764;
@@ -488,38 +498,34 @@ a {
 .mob-menu-social {
   position: relative;
   display: flex;
-}
-
-.mob-menu-social__item::before {
-  display: block;
-  content: " ";
-  position: absolute;
-  width: 22px;
-  height: 1px;
-  left: 0px;
-  top: 10px;
-  margin-left: 10px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  transform: rotate(90deg);
+  flex-wrap: wrap;
 }
 
 .mob-menu-social__item {
   position: relative;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 3vw;
   line-height: 1.2222;
   letter-spacing: 0.02em;
-  margin-right: 20px;
 }
 .mob-menu-social__item:last-child {
   margin-right: 0;
 }
 
 .mob-menu-social__link {
-  color: var(--primary-text-color);
-}
-.mob-menu-social__link:hover, .mob-menu-social__link:focus {
   color: var(--accent-text-color);
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.mob-menu-social__link--last {
+  padding-right: 0;
+  border-right: 0;
+}
+
+.mob-menu-social__link--first {
+  padding-left: 0;
 }
 
 /* основной блок */
@@ -729,13 +735,11 @@ a {
 @media screen and (min-width: 768px) {
   .hero .hero__title {
     width: 360px;
-    height: 84px;
   }
 }
 @media screen and (min-width: 1200px) {
   .hero .hero__title {
     width: 696px;
-    height: 120px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.3636;
@@ -878,22 +882,28 @@ a {
   cursor: pointer;
 }
 .social .social__item {
+  width: 44px;
+  height: 44px;
+}
+
+.social__link {
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: var(--header-bg-color);
   width: 44px;
   height: 44px;
-  border-radius: 20px;
+  border-radius: 50%;
   margin-right: 10px;
   fill: var(--customers-border-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social .social__item:hover {
+.social__link:hover, .social__link:focus {
   background-color: var(--accent-text-color);
   fill: var(--header-bg-color);
 }
 
-.social__item:last-child {
+.social__link:last-child {
   margin-right: 0;
 }
 
@@ -1092,9 +1102,6 @@ a {
   justify-content: center;
   cursor: pointer;
 }
-.portfolio-nav .portfolio-nav__item {
-  margin-right: 8px;
-}
 
 .footer-bg {
   background-color: var(--footer-bg-color);
@@ -1108,9 +1115,6 @@ a {
   }
 }
 @media screen and (min-width: 1200px) {
-  .footer-bg {
-    padding-bottom: 0;
-  }
   .footer-bg .conteiner {
     padding-bottom: 0;
   }
@@ -1163,7 +1167,7 @@ a {
   .footer-conteiner {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: baseline;
   }
 }
 
@@ -1177,6 +1181,17 @@ a {
   flex-direction: column;
   align-items: center;
   margin-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .footer-bg-flex {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-bg-flex {
+    margin-right: 70px;
+    margin-bottom: 0;
+  }
 }
 
 .invisible-header {
@@ -1215,7 +1230,6 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 60px;
 }
 @media screen and (min-width: 768px) {
   .social-footer {
@@ -1234,12 +1248,15 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 60px;
 }
 @media screen and (min-width: 1200px) {
   .subscription-footer {
     display: flex;
     flex-direction: column;
     align-items: baseline;
+    margin-top: 0;
+    margin-left: 93px;
   }
 }
 .subscription-footer .subscription-footer__text {
@@ -1293,27 +1310,27 @@ a {
   }
 }
 
+.footer-adapt {
+  width: 100%;
+}
 @media screen and (min-width: 768px) {
-  .footer-adaptive {
+  .footer-adapt {
     display: flex;
     align-items: baseline;
     justify-content: space-around;
-    width: 100%;
   }
 }
 @media screen and (min-width: 1200px) {
-  .footer-adaptive {
+  .footer-adapt {
     display: flex;
     margin-bottom: 0;
+    align-items: baseline;
+    width: auto;
   }
 }
 
-.footer-tablet {
-  display: flex;
-  margin-bottom: 60px;
-}
-
 .backdrop {
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
@@ -1329,6 +1346,7 @@ a {
 }
 @media screen and (min-width: 768px) {
   .backdrop {
+    overflow-y: scroll;
     padding-bottom: 207px;
     padding-top: 208px;
     padding-left: 159px;
@@ -1343,12 +1361,25 @@ a {
 .modal {
   position: relative;
   background-color: var(--header-bg-color);
+  max-width: 450px;
   border-radius: 4px;
   padding: 40px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    max-width: 450px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
     position: absolute;
+    max-width: 528px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -1468,7 +1499,6 @@ a {
   display: flex;
   justify-content: space-between;
   padding-top: 0;
-  padding-bottom: 94px;
 }
 @media screen and (max-width: 1199px) {
   .direction {
@@ -1495,6 +1525,7 @@ a {
   line-height: 1.1428;
   text-align: center;
   letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 1199px) {
@@ -1511,6 +1542,8 @@ a {
 }
 
 .portfolio-nav {
+  column-gap: 8px;
+  row-gap: 15px;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
@@ -1533,14 +1566,6 @@ a {
   }
 }
 
-.portfolio-nav__item {
-  margin-top: 15px;
-}
-@media screen and (min-width: 400px) {
-  .portfolio-nav__item :nth-child(-n+2) {
-    margin-top: 0;
-  }
-}
 @media screen and (min-width: 768px) {
   .portfolio-nav__item {
     margin-top: 0;
