--- a/sass/components/_contacts-header.scss
+++ b/sass/components/_contacts-header.scss
@@ -2,7 +2,7 @@
 
     display: none;
     display: flex;
-    margin-left: auto;
+  
 
     @media screen and (min-width: 768px){
 flex-direction: column;
@@ -19,13 +19,16 @@ justify-content: center;
         .contacts-header__item{
             @media screen and (min-width: 768px) {
                 margin-bottom: 10px;
+                &:last-child {
+                        margin-bottom: 0;
+                        margin-right: 0;
+                    }
               
             }
-            &:last-child{
-                margin-bottom: 0;
-            }
+            
                         @media screen and (min-width: 1200px){
-                            margin-right: 30px;
+                        margin-right: 30px;
+                        margin-bottom: 0;
                         }
                         
         }
@@ -44,6 +47,7 @@ justify-content: center;
 
                 &:not(:last-child) {
                     margin-left: 0;
+                    
                 }
 
                 &:hover {
@@ -57,14 +61,14 @@ justify-content: center;
                 }
                         }
 
-                    
+                                
                 
 @media screen and (min-width: 1200px) {
     display: flex;
     align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
-    
+    margin-bottom: 0;
     fill: var(--primary-text-color);
     color: var(--primary-text-color);
     font-weight: 500;
@@ -90,6 +94,9 @@ justify-content: center;
 
 
 }}
+.contacts-header__link:last-child {
+    margin-bottom: 0;
+}
 
 
 
