--- a/sass/components/_direction.scss
+++ b/sass/components/_direction.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     
             padding-top: 0;
-            padding-bottom: 94px;
+            
     
     @media screen and (max-width: 1199px) {
             display: none;
@@ -31,6 +31,7 @@
                     line-height: 1.1428;
                     text-align: center;
                     letter-spacing: 0.03em;
+                    text-transform: uppercase;
                 }
 }
 .section__title--displayNone{@media screen and (max-width: 1199px) {
