--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,7 +1,7 @@
 
 
 .footer-bg {
-    // width: 480px;
+    
     background-color: var(--footer-bg-color);
     padding-top: 60px;
     padding-bottom: 60px;
@@ -10,11 +10,11 @@
             width: 100%;
         }
     @media screen and (min-width: 1200px){
-        padding-bottom: 0;
+        
         .conteiner{
             padding-bottom: 0;
         }
-        // width: 1200px;
+    
     }
 }
 
@@ -56,15 +56,13 @@
     }
 }
 .footer-conteiner {
-    // display: flex;
-    // align-items: baseline;
         display: flex;
         flex-direction: column;
         align-items: center;
         @media screen and (min-width: 1200px) {
             display: flex;
                 flex-direction:row;
-                align-items:flex-start;
+                align-items:baseline;
         }
 }
 .footer-list-contacts {
@@ -76,6 +74,15 @@
         flex-direction: column;
         align-items: center;
         margin-bottom: 60px;
+        @media screen and (min-width: 768px) {
+            margin-bottom: 0;
+        }
+        @media screen and (min-width: 1200px) {
+            margin-right: 70px;
+            margin-bottom: 0;
+        }
+        
+       
 }
 .invisible-header {
     display: none;
@@ -100,12 +107,6 @@
                     fill: var(--accent-text-color);
                 }
         }
-    
-        
-    
-
-
-    
 .footer-social__item {
     margin-right: 10px;
     &:last-child {
@@ -118,14 +119,14 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-bottom: 60px;
+        
         @media screen and (min-width: 768px){
             margin-top: 0;
                 margin-bottom: 0;
                 
         }
-        @media screen and (min-width: 1200px){
-            margin-top: 0;
+        @media screen and (min-width: 1200px) {
+                margin-top: 0;
                 margin-bottom: 0;
                 
         }
@@ -136,12 +137,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+     margin-top: 60px;
+
     @media screen and (min-width: 1200px){
             display: flex;
             flex-direction: column;
             align-items: baseline;
+            margin-top: 0;
+            margin-left: 93px;
     }
-   
 
     .subscription-footer__text {
             margin-bottom: 20px;
@@ -151,10 +155,6 @@
             letter-spacing: 0.03em;
             text-transform: uppercase;
             color: var(--header-bg-color);
-            // @media screen and (min-width: 1200px){
-            //     font-size: 16px;
-            //     line-height: 1.1428;
-            // }
         }
 }
 .form-footer {
@@ -195,25 +195,26 @@
             }
         }
 }
-.footer-adaptive{
+
+.footer-adapt{
+width: 100%;
     @media screen and (min-width: 768px) {
             display: flex;
             align-items: baseline;
             justify-content: space-around;
-            width: 100%;
             
-            
-            
+        }
+            @media screen and (min-width: 1200px) {
+                    display: flex;
+                    margin-bottom: 0;
+                    align-items: baseline;
+                    width: auto;
+                }   
 }
-@media screen and (min-width: 1200px){
-    display: flex;
-    margin-bottom: 0;
-}
-}
-.footer-tablet{
-    display: flex;
-    margin-bottom: 60px;
-}
+
+
+
+
 
 
 
