--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,6 +1,7 @@
 
 
 .backdrop {
+    z-index: 2;
     position: fixed;
     top: 0;
     left: 0;
@@ -14,6 +15,7 @@
         padding-left: 15px;
         padding-right: 15px;
         @media screen and (min-width: 768px) {
+            overflow-y: scroll;
         padding-bottom: 207px;
             padding-top: 208px;
             padding-left: 159px;
@@ -32,13 +34,21 @@
 .modal {
         position: relative;
         background-color: var(--header-bg-color);
+        max-width: 450px;
         border-radius: 4px;
         padding: 40px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         @media screen and (min-width: 768px){
-
+            max-width: 450px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
         @media screen and (min-width: 1200px){
         position: absolute;
+        max-width: 528px;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
