--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,8 +11,10 @@
         }
     @media screen and (min-width: 1200px){
         
+        
         .conteiner{
             padding-bottom: 0;
+            width: fit-content;
         }
     
     }
@@ -63,6 +65,7 @@
             display: flex;
                 flex-direction:row;
                 align-items:baseline;
+                
         }
 }
 .footer-list-contacts {
